tests/fixtures/fail/array_constant_oob.sc
let main(): i32 = {
  let values = [42]
  values[1]
}
